# jank-chess

./: .gitignore  README.md  TODO.md
client/: env.js  index.js  package-lock.json  package.json
client/lib/: API.js  Engine.js  Game.js  request.js
engine/: CMakeLists.txt  build.sh
engine/apps/: CMakeLists.txt  dev.cpp  perft.cpp
engine/engines/: CMakeLists.txt
engine/engines/1FirstMove/: CMakeLists.txt
engine/engines/2Search/: CMakeLists.txt  engine.cpp
engine/find_magic/: find_magic.cpp
engine/include/: Attack.h  Board.h  CMakeLists.txt  Game.h  Makefile  Move.h  PieceTable.h  Transposition.h  Zobrist.h  cmake_install.cmake  types.h
engine/src/: Attack.cpp  BBoard.cpp  Board.cpp  CMakeLists.txt  Game.cpp  Move.cpp  Transposition.cpp  Zobrist.cpp
js/: env.js  index.js  package-lock.json
js/lib/: Game.js
src/: BBoard.cpp  BBoard.h  Board.cpp  Board.h  FindMagic.cpp  FindMagic.h  Game.cpp  Game.h  Magic.cpp  Magic.h  Move.cpp  Move.h  build.sh  main.cpp  perft.cpp  server.cpp  types.h
